// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileViewForm test case 1: @profile.ipfs_avatar is true 1`] = `
<div
  className="view-form"
>
  <div
    className="d-flex justify-content-center"
  >
    <img
      alt=""
      className="profile-image"
      src={true}
    />
  </div>
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Display name",
        "id": "app.containers.Profile.displayNameLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Position",
        "id": "app.containers.Profile.positionLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Company",
        "id": "app.containers.Profile.companyLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "About me",
        "id": "app.containers.Profile.aboutLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Location",
        "id": "app.containers.Profile.locationLabel",
      }
    }
  />
</div>
`;

exports[`ProfileViewForm test case 2: @profile.ipfs_avatar is false 1`] = `
<div
  className="view-form"
>
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Display name",
        "id": "app.containers.Profile.displayNameLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Position",
        "id": "app.containers.Profile.positionLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Company",
        "id": "app.containers.Profile.companyLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "About me",
        "id": "app.containers.Profile.aboutLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Location",
        "id": "app.containers.Profile.locationLabel",
      }
    }
  />
</div>
`;

exports[`ProfileViewForm test case 3: isOwner is true 1`] = `
<div
  className="view-form"
>
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Display name",
        "id": "app.containers.Profile.displayNameLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Position",
        "id": "app.containers.Profile.positionLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Company",
        "id": "app.containers.Profile.companyLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "About me",
        "id": "app.containers.Profile.aboutLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Location",
        "id": "app.containers.Profile.locationLabel",
      }
    }
  />
</div>
`;

exports[`ProfileViewForm test case 4: isOwner is false 1`] = `
<div
  className="view-form"
>
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Display name",
        "id": "app.containers.Profile.displayNameLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Position",
        "id": "app.containers.Profile.positionLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Company",
        "id": "app.containers.Profile.companyLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "About me",
        "id": "app.containers.Profile.aboutLabel",
      }
    }
  />
  <ViewFormListItem
    label={
      Object {
        "defaultMessage": "Location",
        "id": "app.containers.Profile.locationLabel",
      }
    }
  />
</div>
`;
